--- a/css/style.css
+++ b/css/style.css
@@ -1567,6 +1567,15 @@ footer ul li a i{
 }
 
 
+.puhastusteenused-section{
+	-webkit-background-size: cover;
+	background-size: cover;
+	position: relative;
+	padding: 100px 0;
+	overflow: hidden;
+}
+
+
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
 
   .main-menu.minified {
